--- a/pref.css
+++ b/pref.css
@@ -13,7 +13,7 @@ h2 {
 font-family: 'Lato', sans-serif;
 font-size:28;
 font-weight:200;
-color: lightseagreen;
+color: dodgerblue;
 font-style:italic;
 }
 
@@ -24,3 +24,30 @@ font-weight:750;
 color:linen;
 }
 
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
