--- a/pref.css
+++ b/pref.css
@@ -1,19 +1,30 @@
+/* Color Scheme:
+black (very dark blue): 1F2421
+teal: 216869
+seagreen: 49A078
+soft green: 9CC5A1
+white: DCE1DE
+/*
+
+
 body {
-background-color: black;
+background-color: #1F2421;
 }
 
 h1 {
 font-family: 'Lato', sans-serif;
 font-size:28;
+text-align: center;
 font-weight:200;
-color: lightseagreen;
+color: #49A078;
 }
 
 h2 {
 font-family: 'Lato', sans-serif;
 font-size:28;
+text-align: center;
 font-weight:200;
-color: dodgerblue;
+color: #9CC5A1;
 font-style:italic;
 }
 
@@ -21,12 +32,12 @@ p {
 font-family: 'Montserrat', sans-serif;
 font-size:12;
 font-weight:750;
-color:linen;
+color:#DCE1DE;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
+  background-color: #1F2421;
   overflow: hidden;
 }
 
@@ -51,3 +62,4 @@ color:linen;
   background-color: #04AA6D;
   color: white;
 }
+
