--- a/pref.css
+++ b/pref.css
@@ -34,6 +34,7 @@ p {
 font-family: 'Montserrat', sans-serif;
 font-size:12;
 font-weight:750;
+text-align:center;
 color:#DCE1DE; /* white */
 }
 
@@ -56,8 +57,8 @@ color:#DCE1DE; /* white */
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: white; /* white background */
-  color: black; /* black text /*
+  background-color: #49A078; /* seagreen background */
+  color: white; /* white text /*
 }
 
 /* Add a color to the active/current link */
