--- a/pref.css
+++ b/pref.css
@@ -67,3 +67,45 @@ color:#DCE1DE; /* white */
   color: #DCE1DE; /* white */
 }
 
+.dropdown {
+	float: left;
+	overflow: hidden;
+}
+
+.dropdown .dropbtn {
+	font-size:16px;
+	border:none;
+	outline:none;
+	color:white;
+	padding:14px 16px;
+	background-color:inherit;
+	font-family:inherit;
+	margin: 0;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #1F2421;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+	
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #5D737E;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
