--- a/home.css
+++ b/home.css
@@ -11,7 +11,7 @@ white: DCE1DE
 
 body {
 /* background-color: #1F2421; /* black */ */
-background-image: url("night_sky.jpeg")
+background-image: url('cosmic_web.png')
 }
 
 /* Add a black background color to the top navigation */
