--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1699,8 +1699,8 @@ input, select, textarea {
 		input[type="reset"].style2,
 		button.style2,
 		.button.style2 {
-			background: none;
-			color: #606167;
+			background: #3d6185;
+			color: white;
 			box-shadow: inset 0px 0px 2px 0px #a0a1a7;
 		}
 
@@ -1725,7 +1725,7 @@ input, select, textarea {
 		input[type="reset"].style3,
 		button.style3,
 		.button.style3 {
-			background: #2f333b url("images/overlay.png");
+			background: #606c38 url("images/overlay.png");
 			color: #fff;
 		}
 
