ok a picture has been added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2988,3 +2988,10 @@ input, select, textarea {
 						}
 
 	}
+
+.image-txt-container {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	gap: 20px;
+}
