--- a/hicolor/sup_analysis/assets/css/main.css
+++ b/hicolor/sup_analysis/assets/css/main.css
@@ -236,7 +236,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #66a661;
+		color: rgb(116, 182, 118);
 		font-weight: 300;
 		letter-spacing: 0.1em;
 		line-height: 1.5;
@@ -1204,7 +1204,7 @@ input, select, textarea {
 			background-image: linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
 			content: '';
 			display: block;
-			height: 100%;
+			height: 50%;
 			left: 0;
 			position: absolute;
 			top: 0;
@@ -1652,6 +1652,7 @@ input, select, textarea {
 				margin: 0;
 				position: absolute;
 				z-index: 1;
+
 			}
 
 			#main .thumb > p {
