--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2003,13 +2003,13 @@ input, select, textarea {
 			}
 
 		.wrapper.style1 {
-			background: #3d6185 url("images/overlay.png");
+			background: #06391D url("images/overlay.png");
 			color: #fff;
 			color: rgba(255, 255, 255, 0.75);
 		}
 
 			.wrapper.style1 .title {
-				background: #3d6185 url("images/overlay.png");
+				background: #06391D url("images/overlay.png");
 				color: #fff;
 			}
 
@@ -2023,12 +2023,12 @@ input, select, textarea {
 
 			.wrapper.style2 .title {
 				background: #606c38 url("images/overlay.png");
-				color:#e0ae68;
+				color:#fff;
 			}
 
-			/* .wrapper.style2 h1, .wrapper.style2 h2, .wrapper.style2 h3 {
+			.wrapper.style2 h1, .wrapper.style2 h2, .wrapper.style2 h3 {
 				color: #a68a64
-			} */
+			}
 		.wrapper.style3 {
 			background: #000000 url("images/overlay.png");
 		}
