--- a/papers/higal_cross/assets/css/main.css
+++ b/papers/higal_cross/assets/css/main.css
@@ -1188,10 +1188,16 @@ input, select, textarea {
 	}
 
 	.poptrox-popup {
-		background: rgba(31, 34, 36, 0.925);
-		margin-bottom:50%;
-		box-shadow: 0 1em 3em 0.5em rgba(0, 0, 0, 0.25);
+		background: black;
+		/* margin-bottom: 25%; */
+		/* right: 25%;*/
+		/* margin-bottom:25%;
+		margin-right:25%; */
+		/* box-shadow: 0 1em 3em 0.5em rgba(0, 0, 0, 0.25); */
 		cursor: default;
+		/* margin-left: -25%; */
+		/* max-height:100%;
+		max-width: 50%; */
 	}
 
 		.poptrox-popup:before {
@@ -1199,17 +1205,17 @@ input, select, textarea {
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
 			transition: opacity 0.2s ease-in-out;
-			background-image: -moz-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -moz-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
+			/* background-image: -moz-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -moz-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
 			background-image: -webkit-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -webkit-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
 			background-image: -ms-linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), -ms-linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
-			background-image: linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0));
+			background-image: linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)), linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0)); */
 			content: '';
 			display: block;
 			height: 50%;
-			left: 0;
+			/* right: -50%; */
 			position: absolute;
 			top: 0;
-			width: 100%;
+			width: 50%;
 			z-index: 1;
 			opacity: 1;
 		}
@@ -1226,7 +1232,7 @@ input, select, textarea {
 			height: 5em;
 			opacity: 0;
 			position: absolute;
-			right: 0;
+			right: 0%;
 			top: 0;
 			width: 5em;
 			z-index: 2;
@@ -1261,7 +1267,7 @@ input, select, textarea {
 		}
 
 		.poptrox-popup .nav-next {
-			right: 0;
+			right: 0%;
 		}
 
 		.poptrox-popup .caption {
@@ -1271,12 +1277,16 @@ input, select, textarea {
 			background-image: -ms-linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%);
 			background-image: linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%);
 			background-color: black;
-			top: 100%;
+			top: 0%;
 			cursor: default;
-			left: 0;
+			left: 100%;
 			position: absolute;
 			text-align: left;
-			width: 100%;
+			/* width: 50%;
+			min-width: 25vw;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			height: 100%; */
 			z-index: 2;
 		}
 
@@ -1287,8 +1297,9 @@ input, select, textarea {
 
 			.poptrox-popup .caption p {
 				color: #ffffff;
-				text-align: center;
-				font-size: large;
+				font-size: 3vh;
+				display: inline-block;
+				vertical-align: middle;
 			}
 
 		.poptrox-popup .loader {
@@ -1664,7 +1675,6 @@ input, select, textarea {
 
 			#main .thumb > p {
 				display: none;
-
 			}
 
 		#main:after {
