--- a/papers/higal_cross/assets/sass/components/_poptrox-popup.scss
+++ b/papers/higal_cross/assets/sass/components/_poptrox-popup.scss
@@ -11,16 +11,16 @@
 	}
 
 	.poptrox-popup {
-		background: transparentize(_palette(bg-alt), 0.075);
-		box-shadow: 0 1em 3em 0.5em rgba(0,0,0,0.25);
+		// background: transparentize(_palette(bg-alt), 0.075);
+		// box-shadow: 0 1em 3em 0.5em rgba(0,0,0,0.25);
 		cursor: default;
 
 		&:before {
 			@include vendor('transition', 'opacity #{_duration(transition)} ease-in-out');
-			@include vendor('background-image', (
-				'linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0))',
-				'linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0))'
-			));
+			// @include vendor('background-image', (
+			// 	'linear-gradient(to left, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0))',
+			// 	'linear-gradient(to right, rgba(31,34,36,0.35), rgba(31,34,36,0) 10em, rgba(31,34,36,0))'
+			// ));
 			content: '';
 			display: block;
 			height: 100%;
@@ -75,7 +75,7 @@
 
 		.caption {
 			@include padding(2em, 2em);
-			@include vendor('background-image', 'linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%)');
+			// @include vendor('background-image', 'linear-gradient(to top, rgba(16,16,16,0.45) 25%, rgba(16,16,16,0) 100%)');
 			bottom: 0;
 			cursor: default;
 			left: 0;
