bg of home page is now image for mobile users

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3135,10 +3135,20 @@ input, select, textarea {
 				text-decoration: none;
 			}
 
-#background-video {
-	object-fit: cover;
-	width: 100vh;
-	position:absolute;
-	width: 100%;
-	z-index: -1;
+/* Common Styles */
+#background-video,
+#background-image {
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+/* Hide both by default */
+#background-video,
+#background-image {
+    display: none;
 }
